# d20project

./: .env  .env.example  .gitignore  package-lock.json  package.json  scripts_update_moves.mjs  vite.config.ts
.github/workflows/: desktop-release.yml
.lovable/: plan.md
docs/: desktop-installable.md  desktop-updates.md  lovable-exit-checklist.md  v2-independent-roadmap.md
pokerole2/: README.md  import_evolutions.mjs
public/: llms.txt  manifest.webmanifest  robots.txt  sw.js
scripts/: build-tauri-frontend.mjs  import-exported-lovable-data.mjs  make-tauri-latest-json.mjs  migrate-supabase-project.mjs  migration-data.README.md  migration-env.example  migration-user-map.example.csv
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AttrFourField.tsx  ChatPanel.tsx  DeckPanel.tsx  DesktopUpdater.tsx  DotEditor.tsx  EffectIcons.tsx  FloatingWindow.tsx  ImageSourceDialog.tsx  KnowledgeIngest.tsx  MacroBar.tsx  MapBoard.tsx  MoveCard.tsx  MoveRollDialog.tsx  MusicPanel.tsx  MusicPlayer.tsx  OnlinePresence.tsx  PageSwitcher.tsx  PokemonSheet.tsx  SettingsDialog.tsx  SheetPermissionsDialog.tsx  SheetRolls.tsx  SheetTabs.tsx  Shop.tsx  T20CharacterSheet.tsx  ThemeToggle.tsx  TokenActionBar.tsx  TokenAppearanceDialog.tsx  TokenAvatar.tsx  TokenLightDialog.tsx  TokenStatsBar.tsx  TrainerSheet.tsx
src/hooks/: use-auth.ts  use-game-effectiveness-flat.ts  use-game-spdef-uses-insight.ts
src/lib/: contest.ts  evolutions.ts  i18n.tsx  (+8 more)
supabase/: config.toml
(+87 files in other folders)
