[package]
name = "d20-project"
version = "0.2.12"
description = "D20 Project desktop app"
authors = ["MatthOlive"]
edition = "2021"

[lib]
name = "d20_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
